dispatch a target version
